--- a/index.html
+++ b/index.html
@@ -3,19 +3,12 @@
 <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+    <title>javascript</title>
 </head>
 <body>
-    <div class="container">
-        <ul class="list">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-        </ul>
-    </div> 
-</body>
+</body> 
 </html>
